# nixpkgs-lib

./: .gitignore  README.md  TEMPLATE.md  default.nix  flake.nix  pyproject.toml  setup.py
.github/workflows/: build.yml  check.yml
nixpkgs_lib/: __init__.py  _builtin.py  _command.py  _curry.py  _nix.py  builtins.py  fixed_points.py  lists.py  strings.py
nixpkgs_lib/curry/: __init__.py
nixpkgs_lib/dunders/: __init__.py  dunders.py
nixpkgs_lib/laziness_simulation/: __init__.py  lazy_iterator.py  stub.py  stub_sequence.py
nixpkgs_lib/scripts/: show_progress.py  statistics.py
nixpkgs_lib_python/: __init__.py  fixed_point.py  fixed_points.py  lists.py
nixpkgs_lib_python/curry/: curry.py
nixpkgs_lib_python/laziness_simulation/: lazy_iterator.py  stub.py
nixpkgs_lib_python/scripts/: __init__.py  show_progress.py
tests/: test_fixed_point.py  test_fixed_points.py  test_lists.py  test_strings.py
